...
            Timber.e(e)
        }
    }

    override suspend fun addDebugRss() {
        rssRepository.store(
                "Yahoo!ニュース・トピックス - 主要",
                "https://news.yahoo.co.jp/pickup/rss.xml",
                "RSS2.0",
                "https://news.yahoo.co.jp"
        )
        rssRepository.store(
                "Yahoo!ニュース・トピックス - 国際",
...
